<resources>
    <string name="app_name">trabalho_cm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tasks">Tarefas</string>
    <string name="menu_projects">Projetos</string>
    <string name="menu_managers">Gestores</string>

    <string name="menu_user">Perfil</string>
    <string name="menu_logout">Sair</string>
</resources>