<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_projects"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_managers"
            android:icon="@drawable/ic_menu_managers"
            android:title="@string/menu_managers" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>